# Sagewell

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  MEMORY.md  NEXT_AGENT.md  POLICIES.md  PROJECT_STATUS.md  README.md  SKILLS.md  TOOLS.md  WORKFLOWS.md  pyproject.toml
context/: decisions.md  glossary.md  project_overview.md  requirements.md
db/fixtures/: 001_users.sql  002_documents.sql  003_chunks.sql
docker/: compose.dev.yml
docs/: AUDIT_REPORT.md  VERIFICATION_REPORT.md
docs/AUDITS/: AUDIT_HISTORY.md  FINDINGS.md  INVESTIGATION_REPORT_M1_IMAGE.md  M10_REPORT.md  M11_REPORT.md  M12_REPORT.md  M13_REPORT.md  M14_REPORT.md  M1_REMEDIATION_REPORT.md  M1_VERIFICATION_REPORT.md  M2_REPORT.md  M3_REPORT.md  M4_REPORT.md  M5_REPORT.md  M6_REPORT.md  M7_REPORT.md  M8_REPORT.md  M9_REPORT.md  MIGRATION_CHECKLIST.md  MILESTONE_GATES.md
docs/HANDOFF/: API_LOCAL_RUN.md  CURRENT_STATE.md  DECISIONS_PENDING.md  GOAL.md  KNOWN_ISSUES.md  TECHNICAL_ISSUES.md  TEST_MIGRATION.md
docs/adr/: 0001-single-tenant-enterprise-rag-baseline.md  0002-pg-search-paradedb.md  0003-raw-sql-migrations.md  0004-embedding-dimension-1536.md  README.md  template.md
infrastructure/migrations/: README.md  apply.sh  rollback.sh
migrations/: 001_extensions.down.sql  001_extensions.up.sql  002_schema.down.sql  002_schema.up.sql  003_indexes.down.sql  003_indexes.up.sql  004_fixtures.down.sql  004_fixtures.up.sql
skills/: README.md
src/api/: __init__.py  __main__.py  app.py  protocols.py  settings.py
src/application/: __init__.py
src/infrastructure/: __init__.py
(+153 files in other folders)
