[project]
name = "sagewell"
version = "0.1.0"
description = "Sagewell V1 enterprise RAG (M0: access decision pure + RBAC suite; M2: ports + in-memory and Postgres adapters)."
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30,<0.32",
    "pgvector>=0.3,<0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.23,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
